// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline renders correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  background-color: #d9dee2 !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  font-weight: 600 !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c5:not(:last-child) {
  margin: 0 0 1rem;
}

.c5 .c8 {
  top: 0.15em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1::before {
  content: '';
  border: 1px solid #d9dee2;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c1:last-child::before {
  border: 0;
}

.c2 {
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 0.625rem;
  width: 0.625rem;
  margin-top: 1rem;
  margin-right: 0.5rem;
  z-index: 1;
}

.c4 {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
  line-height: 1.5rem;
  color: #435a6f;
}

.c4:not(:last-child) {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
}

.c7 {
  color: #435a6f;
}

<div
  class="c0"
>
  <div
    aria-describedby="StepDetail1"
    aria-labelledby="StepHeading1"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail1"
      aria-labelledby="StepHeading1"
      class="c0"
    >
      <p
        class="c4 c5 c6"
        font-weight="semibold"
        id="StepHeading1"
        style="font-weight: semibold;"
      >
        Step one Heading
      </p>
      <div
        class="c7 c0"
        id="StepDetail1"
      >
        Step one details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail2"
    aria-labelledby="StepHeading2"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail2"
      aria-labelledby="StepHeading2"
      class="c0"
    >
      <p
        class="c4 c5 c6"
        font-weight="semibold"
        id="StepHeading2"
        style="font-weight: semibold;"
      >
        Step two Heading
      </p>
      <div
        class="c7 c0"
        id="StepDetail2"
      >
        Step two details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail3"
    aria-labelledby="StepHeading3"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail3"
      aria-labelledby="StepHeading3"
      class="c0"
    >
      <p
        class="c4 c5 c6"
        font-weight="semibold"
        id="StepHeading3"
        style="font-weight: semibold;"
      >
        Step three Heading
      </p>
      <div
        class="c7 c0"
        id="StepDetail3"
      >
        Step three details goes here
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline with activeStep renders correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  background-color: #d9dee2 !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  font-weight: 600 !important;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c4:not(:last-child) {
  margin: 0 0 1rem;
}

.c4 .c9 {
  top: 0.15em;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c7:last-child {
  margin-bottom: 0;
}

.c7::before {
  content: '';
  border: 1px solid #d9dee2;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c7:last-child::before {
  border: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1::before {
  content: '';
  border: 1px solid purple;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c1:last-child::before {
  border: 0;
}

.c2 {
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 0.625rem;
  width: 0.625rem;
  margin-top: 1rem;
  margin-right: 0.5rem;
  z-index: 1;
}

.c3 {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
  line-height: 1.5rem;
  color: #435a6f;
}

.c3:not(:last-child) {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
}

.c6 {
  color: #435a6f;
}

<div
  class="c0"
>
  <div
    aria-describedby="StepDetail1"
    aria-labelledby="StepHeading1"
    class="c1 c0"
  >
    <div
      class="c2 c0"
      style="background-color: purple;"
    />
    <div
      aria-describedby="StepDetail1"
      aria-labelledby="StepHeading1"
      class="c0"
    >
      <p
        class="c3 c4 c5"
        font-weight="semibold"
        id="StepHeading1"
        style="font-weight: semibold;"
      >
        Step one Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail1"
      >
        Step one details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail2"
    aria-labelledby="StepHeading2"
    class="c7 c0"
  >
    <div
      class="c2 c0"
      style="background-color: purple;"
    />
    <div
      aria-describedby="StepDetail2"
      aria-labelledby="StepHeading2"
      class="c0"
    >
      <p
        class="c3 c4 c5"
        font-weight="semibold"
        id="StepHeading2"
        style="font-weight: semibold;"
      >
        Step two Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail2"
      >
        Step two details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail3"
    aria-labelledby="StepHeading3"
    class="c7 c0"
  >
    <div
      class="c2 c8"
    />
    <div
      aria-describedby="StepDetail3"
      aria-labelledby="StepHeading3"
      class="c0"
    >
      <p
        class="c3 c4 c5"
        font-weight="semibold"
        id="StepHeading3"
        style="font-weight: semibold;"
      >
        Step three Heading
      </p>
      <div
        class="c6 c0"
        id="StepDetail3"
      >
        Step three details goes here
      </div>
    </div>
  </div>
</div>
`;

exports[`Timeline with custom color in step renders correctly 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  background-color: #d9dee2 !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  font-weight: 600 !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c5:not(:last-child) {
  margin: 0 0 1rem;
}

.c5 .c9 {
  top: 0.15em;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c1:last-child {
  margin-bottom: 0;
}

.c1::before {
  content: '';
  border: 1px solid #d9dee2;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c1:last-child::before {
  border: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.c8:last-child {
  margin-bottom: 0;
}

.c8::before {
  content: '';
  border: 1px solid green;
  position: absolute;
  height: 100%;
  left: 0.25rem;
  margin-top: 1.25rem;
}

.c8:last-child::before {
  border: 0;
}

.c2 {
  border-radius: 50%;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 0.625rem;
  width: 0.625rem;
  margin-top: 1rem;
  margin-right: 0.5rem;
  z-index: 1;
}

.c4 {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
  line-height: 1.5rem;
  color: #435a6f;
}

.c4:not(:last-child) {
  margin-top: 0.5rem;
  margin-bottom: 0.25rem;
}

.c7 {
  color: #435a6f;
}

<div
  class="c0"
>
  <div
    aria-describedby="StepDetail1"
    aria-labelledby="StepHeading1"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail1"
      aria-labelledby="StepHeading1"
      class="c0"
    >
      <p
        class="c4 c5 c6"
        font-weight="semibold"
        id="StepHeading1"
        style="font-weight: semibold;"
      >
        Step one Heading
      </p>
      <div
        class="c7 c0"
        id="StepDetail1"
      >
        Step one details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail2"
    aria-labelledby="StepHeading2"
    class="c8 c0"
  >
    <div
      class="c2 c0"
      style="background-color: green;"
    />
    <div
      aria-describedby="StepDetail2"
      aria-labelledby="StepHeading2"
      class="c0"
    >
      <p
        class="c4 c5 c6"
        font-weight="semibold"
        id="StepHeading2"
        style="font-weight: semibold;"
      >
        Step two Heading
      </p>
      <div
        class="c7 c0"
        id="StepDetail2"
      >
        Step two details goes here
      </div>
    </div>
  </div>
  <div
    aria-describedby="StepDetail3"
    aria-labelledby="StepHeading3"
    class="c1 c0"
  >
    <div
      class="c2 c3"
    />
    <div
      aria-describedby="StepDetail3"
      aria-labelledby="StepHeading3"
      class="c0"
    >
      <p
        class="c4 c5 c6"
        font-weight="semibold"
        id="StepHeading3"
        style="font-weight: semibold;"
      >
        Step three Heading
      </p>
      <div
        class="c7 c0"
        id="StepDetail3"
      >
        Step three details goes here
      </div>
    </div>
  </div>
</div>
`;
